--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">as1</string>
+    <string name="app_name">jvogel-HabitTracker</string>
     <string name="action_settings" />
 </resources>
